# atlassian-mcp

./: .env.example  .gitignore  README.md  mcp_config.json  pyproject.toml  test_confluence_detailed.py  test_confluence_scopes.py  test_connection.py
atlassian_mcp/: __init__.py  __main__.py  client.py  server.py
